--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -101,6 +101,10 @@ input[type="radio"] {
   padding: 0 !important;
 }
 
+.padding-top {
+  padding-top: 15px !important;
+}
+
 .terminal-container {
   width: 100%;
   padding: 10px 5px;
